--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -12,7 +12,7 @@ It solves discrete systems using a QP solver.
 The library has been design to be fast and user-friendly. 
 Python bindings are also provided. 
 
-It is also my first big library. 
+It is also my first big library!
 In this article i will describe to what a mpc is made for, why you should use it and how.
 <!--more-->
 
@@ -21,6 +21,8 @@ MPC stands for Model Preview Control.
 It is used to solve a problem in a horizon of time by minimizing a cost function.
 Be aware that the library here is made to solve Linear Time Invariant (LTI) discrete systems.
 This means that the behavior of the system does not change through time.
+
+So, in simple words, you can use a mpc to find a trajectory to a targeted point or find the control that leads to a given trajectory.
 
 ## Continuous system
 Generally, all start with a beautiful continuous system.
@@ -41,7 +43,7 @@ where \\(A\\), \\(B\\) and \\(\mathbf{d}\\) are respectively the state matrix, t
 ## How the horizon is computed
 
 To show how the MPC finds out the solution, we need to develop the equation above.
-We need first to perform a recurrence and this what comes out at a step \\(k\\).
+We need first to perform a recurrence and see what comes out at a step \\(k\\).
 
 $$
 \begin{eqnarray}
@@ -121,7 +123,7 @@ $$
 # Let's dive into the library
 The definition of the matrices above is really important to have a proper use of the library.
 The library has been developed using c++14 tools and it uses [eigen matrix library](http://eigen.tuxfamily.org) internally.
-Later, i will call step-matrix (resp. step-vector), a matrix (resp. vectors) that has the dimension of one step (same dimension as \\(\mathbf{x}_k\\))
+Later, i will call step-matrix (resp. step-vector), a matrix (resp. vector) that has the dimension of one step (same dimension as \\(\mathbf{x}_k\\))
 and whole-matrix (resp. whole-vector), a matrix (resp. vector) that has the full dimension (same dimension as \\(\mathbf{X}\\)).
 
 ## The system
@@ -133,6 +135,8 @@ It is better to create a shared pointer of the instance.
 auto ps = std::make_shared<mpc::PreviewSystem>();
 // Initialize the system
 ps->system(A, B, d, x_0, x_traj, nrStep);
+// Initialize the system in the constructor
+auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_traj, nrStep);
 ```
 
 ## The mpc
@@ -160,9 +164,16 @@ mpc::MPCTypeFull controller();
 controller.initializeController(ps);
 ```
 
+To get the results, you just need to call it :)
+
+```c++
+Eigen::VectorXd trajectory = controller.trajectory();
+Eigen::VectorXd control = controller.control();
+```
+
 ## The constraints
-The library provides several types of constraints, let's see what we can do.
-All the constraints can be created using with step-matrix or whole-matrix.
+The library provides several types of constraints.
+All the constraints can be created using step-matrix or whole-matrix.
 We will see that a mixed of the two is also possible.
 They also need to be wrapped in a shared pointer in order to pass them to the mpc.
 
@@ -182,6 +193,8 @@ auto eqTrajConstr = std::make_shared<mpc::TrajectoryConstraint>(E, f, false);
 auto boundTrajConstr = std::make_shared<mpc::TrajectoryBoundConstraint>(lower, upper);
 ```
 
+Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In python side, you have to use `float('Inf')`.
+
 ### Control Constraints
 This is pretty much the same idea as above, there is two type: The control constraint \\(G\mathbf{U} \leq \mathbf{f}\\) or \\(G\mathbf{U} = \mathbf{f}\\)
 and the control bound constraint \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}\\).
@@ -198,7 +211,7 @@ auto boundControlConstr = std::make_shared<mpc::ControlBoundConstraint>(lower, u
 ```
 
 ### Mixed Constraints
-Mixed constraints allow you to add constraints that involves both the trajectory and the control.
+Mixed constraints allow you to add constraints that involve both the trajectory and the control.
 It is written as \\(E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}\\) or \\(E\mathbf{X} + G\mathbf{U} = \mathbf{f}\\).
 As always:
 
@@ -222,20 +235,20 @@ controller.addConstraint(ineqControlConstr);
 ### Constraint removal
 There are two ways of deleting a constraint from the mpc.
 The main and recommended way to do so, is to let the mpc handles it.
-In the `solve` function and at the end, the mpc instance checks whether or not a constraint needs to be deleted.
+In the `solve` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
 A constraint is deleted if the user (you) has deleted his shared pointer of the constraint.
 If you keep a shared pointer of the constraint alive, the constraint remains in the mpc.
-Another is to call the function `Needs to be reimplemented`
+Another way is to call the function `Needs to be reimplemented`
 
 ### The autoSpan function
 The `autoSpan` function is present in all constraints.
-This method needs to be called if you have created a constraint with step-matrix and whole-matrix.
+This method needs to be called if you have created a constraint with step-matrix/vector and whole-matrix/vector.
 For example, if you have a constant matrix \\(G\\) (so same matrix for one step) for the control constraint and
 a whole-vector \\(\mathbf{f}\\) (so for the full horizon), you can pass the two matrices to the constraint and then call the autoSpan function.
 
 ## Changing the QP solver
-Depending on your compilation state, for now, 4 QP solvers are used.
-You can change at anytime the QP to use for solving the your problem.
+Depending on your compilation state, 4 QP solvers are implemented.
+You can change at anytime the QP to use for solving your problem.
 The current available QP are:
  * QuadProg (Default one)
  * QLD
@@ -253,18 +266,188 @@ controller.selectQPSolver(mpc::SolverFlag::GUROBIDense)
 ## Python users
 Python users can use all the library, the same way as C++ users.
 There are some change though.
-As a shared pointer of constraints and preview system are needed a specific function has been developed.
-Python users need to call the function is `New` in front.
-For example, `PreviewSystem` becomes `NewPreviewSystem`.
+As a shared pointer of constraints and preview system are needed, a specific function has been developed.
+Python users need to call the function with `New` in front.
+For example, `PreviewSystem()` becomes `NewPreviewSystem()`.
+The lib minieigen provides all the tools needed to use Eigen in Python.
 
 ## Improving performance and building time
-First, you can measure building and solving time of the mpc using `buildTime` and `solveAndBuildTime` functions.
-
+First, you can measure building and solving time of the mpc using `solveTime()` and `solveAndBuildTime()` functions.
+This computes internally the time needed to uild the problem and to solve it.
 
 ### Prefer MPCTypeLast over MPCTypeFull for single target
+The class `MPCTypeFull()` is really made for trajectory but it is possible to give a target. 
+If you do so, the mpc will try to reach the target as fast as it can, so it may reach before the end of the horizon of time.
+Whereas, `MPCTypeLast()` only tries to reach the target at the end of the horizon of time. 
+Internally, `MPCTypeLast()` has less computation to do and thus, is faaster.
 
 ### Updating the system yourself
+The initialization of the preview system is just meant to allocate memory for all the needed matrices (\\(\Phi\\), \\(\Psi\\), etc...)
+Normally, when calling the `solve()` function of the mpc, there is no need to do anything else. 
+If those matrices are not updated yet, then they will be built before solving the problem.
+In the case you can (and want to) update the system yourself, you just need to call the `updateSystem()` function of the preview system.
+The `solve()` function will be then faster since it does not have to build the preview system.
+
+Note that you have a full control of the preview system.
+You can voluntary modify the matrices inside the preview system if you have specific matrices.
+Don't forget the (re)initialize the mpc if you have changed the dimension of the problem.
 
 ### Give rvalue to the constraints
+Constraints constructor and weights functions use universal reference to allow move semantic of rvalue and copy of lvalue. 
+In the case you don't need to keep the constraint matrices, prefer rvalue as parameters. This feature is not available for python users.
 
 ### Privilege step-matrix and step-vector
+The library lets you use both step-matrix/vector and whole-matrix/vector.
+When only step-matrix and step-vector are given and because of the sparsity of the problem, the computation will run faster.
+Note that for some constraints (control constraints and bound constraints) a move is perform for whole-matrix/vector. 
+
+Sparse matrix will be used to improve performance in future release.
+
+## Examples
+I will show in this section a step-by-step how-to-do example.
+This example aims to solve a common problem in humanoid robot dynamic walk.
+In dynamic walk, a model preview control is used to find a trajectory for the Center of Mass (CoM) of the robot considering its Zero-momentum Point (ZMP). 
+The ZMP is a point on the ground which must stay inside the polygon defined by the foot of the robot. 
+The equation is given by
+$$
+    \ddot{c} = ??
+$$
+
+This equation can be written as a linear system.
+
+$$
+    linear system
+$$
+
+From it, we can easily perform the discretization.
+
+$$
+    Discretize system
+$$
+
+### Full example in C++
+First of all, the headers
+
+```c++
+// stl headers
+#include <iostream>
+#include <memory>
+#include <utility>
+
+// mpc headers
+#include <mpc/constraints.h>
+#include <mpc/previewController.h>
+#include <mpc/PreviewSystem.h>
+```
+
+then need to create the system
+
+```c++
+double T = 0.2;
+Eigen::MatrixXd A(Eigen::MatrixXd::Identity(4, 4));
+A(0, 2) = T;
+A(2, 3) = T;
+Eigen::MatrixXd B(4, 2);
+B << T*T/2,     0,
+         0, T*T/2, 
+         T,     0, 
+         0,     T;
+d = ?;
+x_0 = ?;
+x_d = ?;
+int nrStep = 10;
+auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_d, nrStep);
+```
+
+Then we create the mixed constraint 
+
+```c++
+Eigen::MatrixXd E, G;
+Eigen::VectorXd f;
+
+// From Polytope will set the matrix E, G and f
+FromPolytope(E, G, f);
+constr = std::make_shared<mpc::MixedConstraint>(E, G, f);
+```
+
+Create the mpc and solve
+
+```c++
+mpc::MPCTypeLast controller(ps);
+controller.addConstraint(constr);
+controller.weights(Eigen::Vector4d(10000, 10000, 100, 100), Eigen::Vector2d(1, 1));
+controller.solve();
+```
+
+Finally, get the results
+```c++
+Eigen::VectorXd trajectory(controller.trajectory());
+Eigen::VectorXd control(controller.control());
+int halfLen = trajectory.rows() / 2; // = 4 * (nrSteps + 1) / 2
+Eigen::VectorXd comPos(halfLen)
+Eigen::VectorXd comVel(halfLen)
+for (int i = 0; i < halfLen; i += 2) {
+    comPos.segment(2 * i, 2) = trajectory.segment(2 * i, 2);
+    comVel.segment(2 * i, 2) = trajectory.segment(2 * (i + 1), 2);
+}
+```
+
+### Full example in Python
+First of all, the headers
+
+```python
+from minieigen import *
+import mpc
+```
+
+then need to create the system
+
+```python
+T = 0.2
+A = MatrixXd.Identity(4, 4)
+A[0, 2] = T
+A[2, 3] = T
+B = MatrixXd([[T*T/2,     0],
+              [0,     T*T/2], 
+              [T,         0], 
+              [0,         T]])
+d = ?
+x_0 = ?
+x_d = ?
+nrStep = 10
+ps = mpc.NewPreviewSystem(A, B, d, x_0, x_d, nrStep);
+```
+
+Then we create the mixed constraint 
+
+```python
+# From Polytope will set the matrix E, G and f
+E, G, f = FromPolytope()
+constr = mpc.NewMixedConstraint(E, G, f)
+```
+
+Create the mpc and solve
+
+```python
+controller = mpc.MPCTypeLast(ps)
+controller.addConstraint(constr)
+controller.weights(VectorXd([10000, 10000, 100, 100]), Vector2d(1, 1))
+controller.solve();
+```
+
+Finally, get the results
+```python
+trajectory = controller.trajectory();
+control = controller.control();
+halfLen = trajectory.rows() / 2; # = 4 * (nrSteps + 1) / 2
+comPos = VectorXd.Identity(halfLen)
+comVel = VectorXd.Identity(halfLen)
+for i in xrange(halfLen, 0, 2):
+    comPos[i] = trajectory[2 * i];
+    comPos[i + 1] = trajectory[2 * i + 1];
+    comVel[i] = trajectory[2 * (i + 1)];
+    comVel[i + 1] = trajectory[2 * (i + 1) + 1]
+```
+
+## Pymanoid
+[Pymanoid]() is library developed in python by [Stéphane Caron]() which allows you to use the model preview controller. It is meant for humanoid robots and displays nice features in [openrave]().
