--- a/_posts/repo/fr/2017-04-13-mpc.md
+++ b/_posts/repo/fr/2017-04-13-mpc.md
@@ -7,6 +7,447 @@ title: Model Preview Control
 permalink: fr/git-repository/mpc
 ---
 
+Cette librairie a été développée pour résoudre le problème du contrôle prédictif. 
+Elle résout des systèmes discrets en utilisant un QP.
+La librairie a été conçue de manière à être performante et facile à utiliser.
+De plus, des bindings python permettent son utilisation dans un environnment python.
+
+C'est ma première gosse librairie !
+Dans cet artcile, je vais décrire en quoi un mpc est utile, pourquoi l'utiliser er comment.
 <!--more-->
 
-# Traduction en cours
+# Un MPC, c'est quoi ?
+MPC est l'acronyme de `Model Preview Control` ou en français `Modèle de Contrôle Prédictif`.
+C'est utile pour trouver une solution dans un horizon de temps donné, cela en minimisant une fonction de coût.
+La librairie ne peut que résoudre des systèmes linéaires invariants dans le temps i.e. le système ne change pas de comportement dans le temps.
+
+De manière plus simple, un mpc est fait pour rechercher une trajectoire qui mène à un point désiré ou encore de rechercher le contrôle à appliquer pour une trajectoire donnée.
+
+## Systèmes continus
+Habituellement, tout commence par un beau système linéaire.
+Et dans la plupart des cas, il est difficile d'en extraire une solution analytique dans le temps.
+Et du coup, il faut discrétiser le système qui alors devient résoluble par le mpc.
+
+REgardons tout d'abord quels types de système peuvent convenir.
+Tout système de la forme
+
+$$ \mathbf{\dot{s}} = A\_c\mathbf{s} + B\_c\mathbf{u} + \mathbf{d}\_c $$
+
+convient. \\(\mathbf{s}\\) le vecteur d'état du système et \\(\mathbf{u}\\) le vecteur de contrôle.
+Après discrétisation d'un pas de temps \\(T\\), le système devient :
+
+$$ \mathbf{s}\_{k+1} = A\mathbf{s}\_k + B\mathbf{u}\_k + \mathbf{d} $$
+
+où \\(A\\), \\(B\\) et \\(\mathbf{d}\\) sont respectivement la matrice d'état, la matrice de contrôle et le biais. Pour comprendre comment discrétiser son système [rien de mieux qu'une page Wikipédia(mettre link fr)](https://en.wikipedia.org/wiki/Discretization)
+
+## Comment calculer le futur ?
+
+Pour expliquer comment le mpc trouve une solution, il faut d'abord trouver la récurrence des équation ci-dessus.
+Aux premières étapes, on a
+
+$$
+\begin{eqnarray}
+    \mathbf{x}\_1 & = & A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d} \\\\
+    \mathbf{x}\_2 & = & A\mathbf{x}\_1 + B\mathbf{u}\_1 + \mathbf{d} \\\\
+                  & = & A(A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
+                  & = & A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d} \\\\
+    \mathbf{x}\_3 & = & A\mathbf{x}\_2 + B\mathbf{u}\_2 + \mathbf{d} \\\\
+                  & = & A(A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
+                  & = & A^3\mathbf{x}\_0 + [A^2B\ AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1\ \mathbf{u}^T\_2]^T + A^2\mathbf{d} + A\mathbf{d} + \mathbf{d}
+\end{eqnarray}.
+$$
+
+Ainsi, on voit assez facilement (on passe la démonstration ici) qu'à la \\(N\\)-ième étape on a:
+
+$$ \mathbf{X}\_N = \Phi\mathbf{x}\_0 + \Psi\mathbf{U}\_{N-1} + \mathbf{\xi} $$
+
+avec
+
+$$
+\Phi = \left[
+    \begin{array}{c}
+        I \\\\
+        A \\\\
+        A^2 \\\\
+        \vdots \\\\
+        A^N
+    \end{array}
+    \right],
+\ \Psi = \left[
+    \begin{array}{cccc}
+        0        & 0        & \cdots & 0 \\\\
+        B        & 0        & \cdots & 0 \\\\
+        AB       & B        & \ddots & \vdots \\\\
+        \vdots   & \vdots   & \ddots & 0 \\\\
+        A^{N-1}B & A^{N-2}B & \cdots & B
+    \end{array}
+    \right],
+\ \mathbf{\xi} = \left[
+    \begin{array}{c}
+        \mathbf{0} \\\\
+        \mathbf{d} \\\\
+        A\mathbf{d} + \mathbf{d} \\\\
+        \vdots \\\\
+        \sum\_{i=0}^{N-1} A^{i}\mathbf{d}
+    \end{array}
+    \right]
+$$
+
+et le vecteur d'état-total \\(\mathbf{X}\\) et le vecteur de contrôle-total \\(\mathbf{U}\\) sont
+
+$$
+\mathbf{X} = \left[
+    \begin{array}{c}
+        \mathbf{x}\_0 \\\\
+        \mathbf{x}\_1 \\\\
+        \vdots \\\\
+        \mathbf{x}\_N
+    \end{array}
+    \right],
+\ \mathbf{U} = \left[
+    \begin{array}{c}
+        \mathbf{u}\_0 \\\\
+        \mathbf{u}\_1 \\\\
+        \vdots \\\\
+        \mathbf{u}\_{N-1}
+    \end{array}
+    \right].
+$$
+
+Finalement, considérant une valeur désirée/une trajectoire désirée \\(\mathbf{X}\_T\\) on calcule sur l'horizon de temps choisi et considérant la fonction de coût suivante
+
+$$
+(\mathbf{X} - \mathbf{X}\_T)^TW_X(\mathbf{X} - \mathbf{X}\_T) + \mathbf{U}^TW\_U\mathbf{U}.
+$$
+
+# Let's dive into the library
+The definition of the matrices above is really important to have a proper use of the library.
+The library has been developed using c++14 tools and it uses [eigen matrix library](http://eigen.tuxfamily.org) internally.
+Later, i will call step-matrix (resp. step-vector), a matrix (resp. vector) that has the dimension of one step (same dimension as \\(\mathbf{x}_k\\))
+and whole-matrix (resp. whole-vector), a matrix (resp. vector) that has the full dimension (same dimension as \\(\mathbf{X}\\)).
+
+## The system
+The system is written in the `PreviewSystem.h` file.
+It defines the whole system and creates the \\(\Phi\\), \\(\Psi\\) and \\(\mathbf{\xi}\\) matrices and vector.
+It is better to create a shared pointer of the instance.
+
+```c++
+auto ps = std::make_shared<mpc::PreviewSystem>();
+// Initialize the system
+ps->system(A, B, d, x_0, x_traj, nrStep);
+// Initialize the system in the constructor
+auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_traj, nrStep);
+```
+
+## The mpc
+The mpc is written in the `previewController.h` file.
+There are two version of it.
+The `MPCTypeFull` and the  `MPCTypeLast`. 
+In the case you want the mpc to find a solution around a trajectory, you must choose the former one. 
+If you only want to target a final point, both can be used.
+The difference is in the construction of the cost function. 
+While the `MPCTypeFull` is using the matrices and vectors \\(\Phi\\), \\(\Psi\\), \\(\mathbf{\xi}\\) and \\(\mathbf{X}\_T\\), the `MPCTypeLast` is only using the bottom part of those (and thus only the last point of the trajectory is searched).
+
+Creating an instance of an mpc is fairly easy.
+
+```c++
+mpc::MPCTypeFull controller(ps);
+// Build the system and solve the mpc
+controller.solve();
+```
+
+It is also possible to (re)initialize the system used by the mpc.
+
+```c++
+mpc::MPCTypeFull controller();
+// (Re)initialize the mpc with the new system
+controller.initializeController(ps);
+```
+
+To get the results, you just need to call it :)
+
+```c++
+Eigen::VectorXd trajectory = controller.trajectory();
+Eigen::VectorXd control = controller.control();
+```
+
+## The constraints
+The library provides several types of constraints.
+All the constraints can be created using step-matrix or whole-matrix.
+We will see that a mixed of the two is also possible.
+They also need to be wrapped in a shared pointer in order to pass them to the mpc.
+
+### Trajectory Constraints
+We distinguish two types of trajectory constraints: The trajectory constraint \\(E\mathbf{X} \leq \mathbf{f}\\) or \\(E\mathbf{X} = \mathbf{f}\\)
+and the trajectory bound constraint \\(\underline{\mathbf{X}} \leq \mathbf{X} \leq \overline{\mathbf{X}}\\).
+Note that the latter can be rewritten to produce the former.
+
+```c++
+// Create an inequality constraint
+// E is step-matrix or whole-matrix, f is step-vector or whole-vector.
+auto ineqTrajConstr = std::make_shared<mpc::TrajectoryConstraint>(E, f);
+// Create an equality constraint
+auto eqTrajConstr = std::make_shared<mpc::TrajectoryConstraint>(E, f, false);
+// Create a bound constraint
+// lower and upper are step-vector or whole-vector
+auto boundTrajConstr = std::make_shared<mpc::TrajectoryBoundConstraint>(lower, upper);
+```
+
+Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In python side, you have to use `float('Inf')`.
+
+### Control Constraints
+This is pretty much the same idea as above, there is two type: The control constraint \\(G\mathbf{U} \leq \mathbf{f}\\) or \\(G\mathbf{U} = \mathbf{f}\\)
+and the control bound constraint \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}\\).
+
+```c++
+// Create an inequality constraint
+// G is step-matrix or whole-matrix, f is step-vector or whole-vector.
+auto ineqControlConstr = std::make_shared<mpc::ControlConstraint>(E, f);
+// Create an equality constraint
+auto eqControlConstr = std::make_shared<mpc::ControlConstraint>(E, f, false);
+// Create a bound constraint
+// lower and upper are step-vector or whole-vector
+auto boundControlConstr = std::make_shared<mpc::ControlBoundConstraint>(lower, upper);
+```
+
+### Mixed Constraints
+Mixed constraints allow you to add constraints that involve both the trajectory and the control.
+It is written as \\(E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}\\) or \\(E\mathbf{X} + G\mathbf{U} = \mathbf{f}\\).
+As always:
+
+```c++
+// Create an inequality constraint
+// E is step-matrix or whole-matrix,  G is step-matrix or whole-matrix, f is step-vector or whole-vector.
+auto ineqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, f);
+// Create an equality constraint
+auto eqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, f, false);
+```
+
+### Adding and updating a constraint
+All that needs to be done is to make the mpc aware of the constraints.
+It will update the constraints when its solve function is called.
+
+```c++
+// Adding an inequality control constraint
+controller.addConstraint(ineqControlConstr);
+```
+
+### Constraint removal
+There are two ways of deleting a constraint from the mpc.
+The main and recommended way to do so, is to let the mpc handles it.
+In the `solve` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
+A constraint is deleted if the user (you) has deleted his shared pointer of the constraint.
+If you keep a shared pointer of the constraint alive, the constraint remains in the mpc.
+Another way is to call the function `Needs to be reimplemented`
+
+### The autoSpan function
+The `autoSpan` function is present in all constraints.
+This method needs to be called if you have created a constraint with step-matrix/vector and whole-matrix/vector.
+For example, if you have a constant matrix \\(G\\) (so same matrix for one step) for the control constraint and
+a whole-vector \\(\mathbf{f}\\) (so for the full horizon), you can pass the two matrices to the constraint and then call the autoSpan function.
+
+## Changing the QP solver
+Depending on your compilation state, 4 QP solvers are implemented.
+You can change at anytime the QP to use for solving your problem.
+The current available QP are:
+ * QuadProg (Default one)
+ * QLD
+ * Gurobi
+ * LSSOL (need commercial license)
+To change the QP:
+
+```c++
+// Create an instance of a mpc with a different QP
+mpc::MPCTypeFull controller(mpc::SolverFlag::QLD)
+// Adding an inequality control constraint
+controller.selectQPSolver(mpc::SolverFlag::GUROBIDense)
+```
+
+## Python users
+Python users can use all the library, the same way as C++ users.
+There are some change though.
+As a shared pointer of constraints and preview system are needed, a specific function has been developed.
+Python users need to call the function with `New` in front.
+For example, `PreviewSystem()` becomes `NewPreviewSystem()`.
+The lib minieigen provides all the tools needed to use Eigen in Python.
+
+## Improving performance and building time
+First, you can measure building and solving time of the mpc using `solveTime()` and `solveAndBuildTime()` functions.
+This computes internally the time needed to uild the problem and to solve it.
+
+### Prefer MPCTypeLast over MPCTypeFull for single target
+The class `MPCTypeFull()` is really made for trajectory but it is possible to give a target. 
+If you do so, the mpc will try to reach the target as fast as it can, so it may reach before the end of the horizon of time.
+Whereas, `MPCTypeLast()` only tries to reach the target at the end of the horizon of time. 
+Internally, `MPCTypeLast()` has less computation to do and thus, is faaster.
+
+### Updating the system yourself
+The initialization of the preview system is just meant to allocate memory for all the needed matrices (\\(\Phi\\), \\(\Psi\\), etc...)
+Normally, when calling the `solve()` function of the mpc, there is no need to do anything else. 
+If those matrices are not updated yet, then they will be built before solving the problem.
+In the case you can (and want to) update the system yourself, you just need to call the `updateSystem()` function of the preview system.
+The `solve()` function will be then faster since it does not have to build the preview system.
+
+Note that you have a full control of the preview system.
+You can voluntary modify the matrices inside the preview system if you have specific matrices.
+Don't forget the (re)initialize the mpc if you have changed the dimension of the problem.
+
+### Give rvalue to the constraints
+Constraints constructor and weights functions use universal reference to allow move semantic of rvalue and copy of lvalue. 
+In the case you don't need to keep the constraint matrices, prefer rvalue as parameters. This feature is not available for python users.
+
+### Privilege step-matrix and step-vector
+The library lets you use both step-matrix/vector and whole-matrix/vector.
+When only step-matrix and step-vector are given and because of the sparsity of the problem, the computation will run faster.
+Note that for some constraints (control constraints and bound constraints) a move is perform for whole-matrix/vector. 
+
+Sparse matrix will be used to improve performance in future release.
+
+## Examples
+I will show in this section a step-by-step how-to-do example.
+This example aims to solve a common problem in humanoid robot dynamic walk.
+In dynamic walk, a model preview control is used to find a trajectory for the Center of Mass (CoM) of the robot considering its Zero-momentum Point (ZMP). 
+The ZMP is a point on the ground which must stay inside the polygon defined by the foot of the robot. 
+The equation is given by
+$$
+    \ddot{c} = ??
+$$
+
+This equation can be written as a linear system.
+
+$$
+    linear system
+$$
+
+From it, we can easily perform the discretization.
+
+$$
+    Discretize system
+$$
+
+### Full example in C++
+First of all, the headers
+
+```c++
+// stl headers
+#include <iostream>
+#include <memory>
+#include <utility>
+
+// mpc headers
+#include <mpc/constraints.h>
+#include <mpc/previewController.h>
+#include <mpc/PreviewSystem.h>
+```
+
+then need to create the system
+
+```c++
+double T = 0.2;
+Eigen::MatrixXd A(Eigen::MatrixXd::Identity(4, 4));
+A(0, 2) = T;
+A(2, 3) = T;
+Eigen::MatrixXd B(4, 2);
+B << T*T/2,     0,
+         0, T*T/2, 
+         T,     0, 
+         0,     T;
+d = ?;
+x_0 = ?;
+x_d = ?;
+int nrStep = 10;
+auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_d, nrStep);
+```
+
+Then we create the mixed constraint 
+
+```c++
+Eigen::MatrixXd E, G;
+Eigen::VectorXd f;
+
+// From Polytope will set the matrix E, G and f
+FromPolytope(E, G, f);
+constr = std::make_shared<mpc::MixedConstraint>(E, G, f);
+```
+
+Create the mpc and solve
+
+```c++
+mpc::MPCTypeLast controller(ps);
+controller.addConstraint(constr);
+controller.weights(Eigen::Vector4d(10000, 10000, 100, 100), Eigen::Vector2d(1, 1));
+controller.solve();
+```
+
+Finally, get the results
+```c++
+Eigen::VectorXd trajectory(controller.trajectory());
+Eigen::VectorXd control(controller.control());
+int halfLen = trajectory.rows() / 2; // = 4 * (nrSteps + 1) / 2
+Eigen::VectorXd comPos(halfLen)
+Eigen::VectorXd comVel(halfLen)
+for (int i = 0; i < halfLen; i += 2) {
+    comPos.segment(2 * i, 2) = trajectory.segment(2 * i, 2);
+    comVel.segment(2 * i, 2) = trajectory.segment(2 * (i + 1), 2);
+}
+```
+
+### Full example in Python
+First of all, the headers
+
+```python
+from minieigen import *
+import mpc
+```
+
+then need to create the system
+
+```python
+T = 0.2
+A = MatrixXd.Identity(4, 4)
+A[0, 2] = T
+A[2, 3] = T
+B = MatrixXd([[T*T/2,     0],
+              [0,     T*T/2], 
+              [T,         0], 
+              [0,         T]])
+d = ?
+x_0 = ?
+x_d = ?
+nrStep = 10
+ps = mpc.NewPreviewSystem(A, B, d, x_0, x_d, nrStep);
+```
+
+Then we create the mixed constraint 
+
+```python
+# From Polytope will set the matrix E, G and f
+E, G, f = FromPolytope()
+constr = mpc.NewMixedConstraint(E, G, f)
+```
+
+Create the mpc and solve
+
+```python
+controller = mpc.MPCTypeLast(ps)
+controller.addConstraint(constr)
+controller.weights(VectorXd([10000, 10000, 100, 100]), Vector2d(1, 1))
+controller.solve();
+```
+
+Finally, get the results
+```python
+trajectory = controller.trajectory();
+control = controller.control();
+halfLen = trajectory.rows() / 2; # = 4 * (nrSteps + 1) / 2
+comPos = VectorXd.Identity(halfLen)
+comVel = VectorXd.Identity(halfLen)
+for i in xrange(halfLen, 0, 2):
+    comPos[i] = trajectory[2 * i];
+    comPos[i + 1] = trajectory[2 * i + 1];
+    comVel[i] = trajectory[2 * (i + 1)];
+    comVel[i + 1] = trajectory[2 * (i + 1) + 1]
+```
+
+## Pymanoid
+[Pymanoid]() is library developed in python by [Stéphane Caron]() which allows you to use the model preview controller. It is meant for humanoid robots and displays nice features in [openrave]().
