--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -22,7 +22,7 @@ It is used to solve a problem in a horizon of time by minimizing a cost function
 Be aware that the library here is made to solve Linear Time Invariant (LTI) discrete systems.
 This means that the behavior of the system does not change through time.
 
-So, in simple words, you can use a mpc to find a trajectory to a targeted point or find the control that leads to a given trajectory.
+So, in simple words, you can use a mpc to find a trajectory to a targeted point or nnd the control that leads to a given trajectory.
 
 ## Continuous system
 Generally, all start with a beautiful continuous system.
@@ -114,11 +114,7 @@ $$
     \right].
 $$
 
-Finally, given a desired target/trajectory \\(\mathbf{X}\_T\\) we compute the horizon using a QP solver with the following cost function
-
-$$
-(\mathbf{X} - \mathbf{X}\_T)^TW_X(\mathbf{X} - \mathbf{X}\_T) + \mathbf{U}^TW\_U\mathbf{U}
-$$
+Finally, given a desired target/trajectory \\(\mathbf{X}\_T\\) we compute the horizon using a QP solver with a desired cost function
 
 # Let's dive into the library
 The definition of the matrices above is really important to have a proper use of the library.
@@ -134,24 +130,17 @@ It is better to create a shared pointer of the instance.
 ```c++
 auto ps = std::make_shared<mpc::PreviewSystem>();
 // Initialize the system
-ps->system(A, B, d, x_0, x_traj, nrStep);
+ps->system(A, B, d, x_0, nrStep);
 // Initialize the system in the constructor
-auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_traj, nrStep);
+auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, nrStep);
 ```
 
 ## The mpc
-The mpc is written in the `previewController.h` file.
-There are two version of it.
-The `MPCTypeFull` and the  `MPCTypeLast`. 
-In the case you want the mpc to find a solution around a trajectory, you must choose the former one. 
-If you only want to target a final point, both can be used.
-The difference is in the construction of the cost function. 
-While the `MPCTypeFull` is using the matrices and vectors \\(\Phi\\), \\(\Psi\\), \\(\mathbf{\xi}\\) and \\(\mathbf{X}\_T\\), the `MPCTypeLast` is only using the bottom part of those (and thus only the last point of the trajectory is searched).
-
-Creating an instance of an mpc is fairly easy.
+The mpc is written in the `LMPC.h` file.
+Creating an instance of an mpc is also fairly easy.
 
 ```c++
-mpc::MPCTypeFull controller(ps);
+mpc::LMPC controller(ps);
 // Build the system and solve the mpc
 controller.solve();
 ```
@@ -159,7 +148,7 @@ controller.solve();
 It is also possible to (re)initialize the system used by the mpc.
 
 ```c++
-mpc::MPCTypeFull controller();
+mpc::LMPC controller();
 // (Re)initialize the mpc with the new system
 controller.initializeController(ps);
 ```
@@ -175,7 +164,7 @@ Eigen::VectorXd control = controller.control();
 The library provides several types of constraints.
 All the constraints can be created using step-matrix or whole-matrix.
 We will see that a mixed of the two is also possible.
-They also need to be wrapped in a shared pointer in order to pass them to the mpc.
+They also need to be wrapped in a shared pointer in order to be passed to the mpc.
 
 ### Trajectory Constraints
 We distinguish two types of trajectory constraints: The trajectory constraint \\(E\mathbf{X} \leq \mathbf{f}\\) or \\(E\mathbf{X} = \mathbf{f}\\)
@@ -218,9 +207,9 @@ As always:
 ```c++
 // Create an inequality constraint
 // E is step-matrix or whole-matrix,  G is step-matrix or whole-matrix, f is step-vector or whole-vector.
-auto ineqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, f);
+auto ineqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, G, f);
 // Create an equality constraint
-auto eqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, f, false);
+auto eqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, G, f, false);
 ```
 
 ### Adding and updating a constraint
@@ -232,17 +221,61 @@ It will update the constraints when its solve function is called.
 controller.addConstraint(ineqControlConstr);
 ```
 
-### Constraint removal
+## Cost functions
+As for constraints, the library provides several types of cost functions.
+All the costs can be created using step-matrix or whole-matrix.
+They also need to be wrapped in a shared pointer in order to be passed to the mpc and may more than one.
+
+### Target Cost
+The target cost function minimizes \\(\|\|M\mathbf{x}_N + \mathbf{p}\|\|\\).
+\\(M\\) must be a step-matrix and \\(p\\) must be a step-vector.
+
+```c++
+// Create a target cost
+auto targetCost = std::make_shared<mpc::TargetCost>(M, p);
+```
+
+### Trajectory Cost
+The trajectory cost function minimizes \\(\|\|M\mathbf{X} + \mathbf{p}\|\|\\).
+
+```c++
+// Create a trajectory cost
+// M is step-matrix or whole-matrix, p is step-vector or whole-vector.
+auto trajectoryCost = std::make_shared<mpc::TrajectoryCost>(M, p);
+```
+
+### Control Cost
+The control cost minimizes \\(\|\|N\mathbf{U} + \mathbf{p}\|\|\\).
+
+```c++
+// Create a control cost
+// M is step-matrix or whole-matrix, p is step-vector or whole-vector.
+auto ControlCost = std::make_shared<mpc::ControlCost>(N, p);
+```
+
+### Mixed Cost
+The mixed cost minimizes \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
+
+```c++
+// Create a mixed cost
+// M is step-matrix or whole-matrix, N is step-matrix or whole-matrix, p is step-vector or whole-vector.
+auto mixedCost = std::make_shared<mpc::MixedCost>(M, N, p);
+```
+
+## Cost and constraint specificities
+There are several helper tools for cost functions and constraints.
+
+### Removal
 There are two ways of deleting a constraint from the mpc.
-The main and recommended way to do so, is to let the mpc handles it.
+The main way is to let the mpc handles it.
 In the `solve` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
 A constraint is deleted if the user (you) has deleted his shared pointer of the constraint.
 If you keep a shared pointer of the constraint alive, the constraint remains in the mpc.
-Another way is to call the function `Needs to be reimplemented`
+Another way is to call the function `removeCost` and `removeConstraint`
 
 ### The autoSpan function
-The `autoSpan` function is present in all constraints.
-This method needs to be called if you have created a constraint with step-matrix/vector and whole-matrix/vector.
+The `autoSpan` function is present in all constraints and cost.
+This method needs to be called if you have created a constraint that mixes step-matrix/vector with whole-matrix/vector.
 For example, if you have a constant matrix \\(G\\) (so same matrix for one step) for the control constraint and
 a whole-vector \\(\mathbf{f}\\) (so for the full horizon), you can pass the two matrices to the constraint and then call the autoSpan function.
 
@@ -259,7 +292,7 @@ To change the QP:
 ```c++
 // Create an instance of a mpc with a different QP
 mpc::MPCTypeFull controller(mpc::SolverFlag::QLD)
-// Adding an inequality control constraint
+// Change the QP at any time
 controller.selectQPSolver(mpc::SolverFlag::GUROBIDense)
 ```
 
@@ -273,13 +306,7 @@ The lib minieigen provides all the tools needed to use Eigen in Python.
 
 ## Improving performance and building time
 First, you can measure building and solving time of the mpc using `solveTime()` and `solveAndBuildTime()` functions.
-This computes internally the time needed to uild the problem and to solve it.
-
-### Prefer MPCTypeLast over MPCTypeFull for single target
-The class `MPCTypeFull()` is really made for trajectory but it is possible to give a target. 
-If you do so, the mpc will try to reach the target as fast as it can, so it may reach before the end of the horizon of time.
-Whereas, `MPCTypeLast()` only tries to reach the target at the end of the horizon of time. 
-Internally, `MPCTypeLast()` has less computation to do and thus, is faaster.
+This computes internally the time needed to build the problem and to solve it.
 
 ### Updating the system yourself
 The initialization of the preview system is just meant to allocate memory for all the needed matrices (\\(\Phi\\), \\(\Psi\\), etc...)
@@ -290,9 +317,9 @@ The `solve()` function will be then faster since it does not have to build the p
 
 Note that you have a full control of the preview system.
 You can voluntary modify the matrices inside the preview system if you have specific matrices.
-Don't forget the (re)initialize the mpc if you have changed the dimension of the problem.
+Don't forget to (re)initialize the mpc if you have changed the dimension of the problem.
 
-### Give rvalue to the constraints
+### Give rvalue to the constraints and costs
 Constraints constructor and weights functions use universal reference to allow move semantic of rvalue and copy of lvalue. 
 In the case you don't need to keep the constraint matrices, prefer rvalue as parameters. This feature is not available for python users.
 
@@ -306,17 +333,17 @@ Sparse matrix will be used to improve performance in future release.
 ## Examples
 I will show in this section a step-by-step how-to-do example.
 This example aims to solve a common problem in humanoid robot dynamic walk.
-In dynamic walk, a model preview control is used to find a trajectory for the Center of Mass (CoM) of the robot considering its Zero-momentum Point (ZMP). 
+In dynamic walk, a model predictive control is used to find a trajectory for the Center of Mass (CoM) \\(s\\) of the robot considering its Zero-momentum Point (ZMP). 
 The ZMP is a point on the ground which must stay inside the polygon defined by the foot of the robot. 
-The equation is given by
+Supposing the COMof the robot does not move vertically, the position \\(z\\) of the CoP is
 $$
-    \ddot{c} = ??
+    z = s - \frac{h_{CoM}}{g}\ddot{s}
 $$
 
 This equation can be written as a linear system.
 
 $$
-    linear system
+    \dot{x} = Ix + 
 $$
 
 From it, we can easily perform the discretization.
@@ -380,6 +407,7 @@ controller.solve();
 ```
 
 Finally, get the results
+
 ```c++
 Eigen::VectorXd trajectory(controller.trajectory());
 Eigen::VectorXd control(controller.control());
@@ -436,6 +464,7 @@ controller.solve();
 ```
 
 Finally, get the results
+
 ```python
 trajectory = controller.trajectory();
 control = controller.control();
@@ -450,4 +479,4 @@ for i in xrange(halfLen, 0, 2):
 ```
 
 ## Pymanoid
-[Pymanoid]() is library developed in python by [Stéphane Caron]() which allows you to use the model preview controller. It is meant for humanoid robots and displays nice features in [openrave]().
+[Pymanoid](https://github.com/stephane-caron/pymanoid) is library developed in python by [Stéphane Caron](https://scaron.info/) which allows you to use the model preview controller for motion planning and ele.
