--- a/_posts/repo/fr/2017-04-13-mpc.md
+++ b/_posts/repo/fr/2017-04-13-mpc.md
@@ -38,7 +38,7 @@ Après discrétisation d'un pas de temps \\(T\\), le système devient :
 
 $$ \mathbf{s}\_{k+1} = A\mathbf{s}\_k + B\mathbf{u}\_k + \mathbf{d} $$
 
-où \\(A\\), \\(B\\) et \\(\mathbf{d}\\) sont respectivement la matrice d'état, la matrice de contrôle et le biais. Pour comprendre comment discrétiser son système [rien de mieux qu'une page Wikipédia(mettre link fr)](https://en.wikipedia.org/wiki/Discretization)
+où \\(A\\), \\(B\\) et \\(\mathbf{d}\\) sont respectivement la matrice d'état, la matrice de contrôle et le biais. Pour comprendre comment discrétiser son système [rien de mieux qu'une page Wikipédia](https://en.wikipedia.org/wiki/Discretization)
 
 ## Comment calculer le futur ?
 
@@ -57,7 +57,7 @@ $$
 \end{eqnarray}.
 $$
 
-Ainsi, on voit assez facilement (on passe la démonstration ici) qu'à la \\(N\\)-ième étape on a:
+Ainsi, on voit assez facilement (on passera la démonstration ici) qu'à la \\(N\\)-ième étape on a:
 
 $$ \mathbf{X}\_N = \Phi\mathbf{x}\_0 + \Psi\mathbf{U}\_{N-1} + \mathbf{\xi} $$
 
@@ -93,7 +93,7 @@ $$
     \right]
 $$
 
-et le vecteur d'état-total \\(\mathbf{X}\\) et le vecteur de contrôle-total \\(\mathbf{U}\\) sont
+et le vecteur d'état total \\(\mathbf{X}\\) et le vecteur de contrôle total \\(\mathbf{U}\\) sont
 
 $$
 \mathbf{X} = \left[
@@ -120,61 +120,57 @@ $$
 (\mathbf{X} - \mathbf{X}\_T)^TW_X(\mathbf{X} - \mathbf{X}\_T) + \mathbf{U}^TW\_U\mathbf{U}.
 $$
 
-# Let's dive into the library
-The definition of the matrices above is really important to have a proper use of the library.
-The library has been developed using c++14 tools and it uses [eigen matrix library](http://eigen.tuxfamily.org) internally.
-Later, i will call step-matrix (resp. step-vector), a matrix (resp. vector) that has the dimension of one step (same dimension as \\(\mathbf{x}_k\\))
-and whole-matrix (resp. whole-vector), a matrix (resp. vector) that has the full dimension (same dimension as \\(\mathbf{X}\\)).
+# La librairie de plus près
+La compréhension des matrices ci-dessus est importante car elle permet de mieux cerner le fonctionnement de la librairie.
+Son développement a été fait avec les outills de c++14. Hormis la librairie c++ standard, j'ai utilisé [eigen](http://eigen.tuxfamily.org) pour la gestion des matrices.
+Enfin, et pour la suite, on appelle matrice-pas (resp. vecteur-pas) une matrice (resp. un vecteur) de la dimension d'un pas de temps et matrice-total (resp. vecteur-total) une matrice (resp. un vecteur) de la dimension de tous les pas de temps.
 
-## The system
-The system is written in the `PreviewSystem.h` file.
-It defines the whole system and creates the \\(\Phi\\), \\(\Psi\\) and \\(\mathbf{\xi}\\) matrices and vector.
-It is better to create a shared pointer of the instance.
+## Le système
+Le système est écrit dans le fichier `PreviewSystem.h`.
+Il définit l'ensemble du système, alloue et construit les variables \\(\Phi\\), \\(\Psi\\) et \\(\mathbf{\xi}\\).
+Il est nécessaire de créer un shared pointer pour ce système.
 
 ```c++
 auto ps = std::make_shared<mpc::PreviewSystem>();
-// Initialize the system
+// Initialise le système
 ps->system(A, B, d, x_0, x_traj, nrStep);
-// Initialize the system in the constructor
+// Initialise le système dans le constructeur
 auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_traj, nrStep);
 ```
 
-## The mpc
-The mpc is written in the `previewController.h` file.
-There are two version of it.
-The `MPCTypeFull` and the  `MPCTypeLast`. 
-In the case you want the mpc to find a solution around a trajectory, you must choose the former one. 
-If you only want to target a final point, both can be used.
-The difference is in the construction of the cost function. 
-While the `MPCTypeFull` is using the matrices and vectors \\(\Phi\\), \\(\Psi\\), \\(\mathbf{\xi}\\) and \\(\mathbf{X}\_T\\), the `MPCTypeLast` is only using the bottom part of those (and thus only the last point of the trajectory is searched).
-
-Creating an instance of an mpc is fairly easy.
+## Le mpc
+Le mpc est quant à lui écrit dans le fichier `previewController.h`.
+Il y a deux versions: `MPCTypeFull` et `MPCTypeLast`.
+Dans la cas où on cherche à se rapprocher d'une trajectoire, il faut utiliser la première version.
+Pour un point final désiré, le second doit être utilisé.
+Créer le mpc est chose facile.
 
 ```c++
 mpc::MPCTypeFull controller(ps);
-// Build the system and solve the mpc
+// Construit le système et résout le problem
 controller.solve();
 ```
 
-It is also possible to (re)initialize the system used by the mpc.
+Il est aussi possible de (ré)initialiser le mpc avec un autre système.
 
 ```c++
 mpc::MPCTypeFull controller();
-// (Re)initialize the mpc with the new system
+// (Ré)initialse le mpc avec un nouveau système
 controller.initializeController(ps);
 ```
 
-To get the results, you just need to call it :)
+Pour récupérer les résultate, faites-en juste la demade :)
 
 ```c++
 Eigen::VectorXd trajectory = controller.trajectory();
 Eigen::VectorXd control = controller.control();
 ```
 
-## The constraints
-The library provides several types of constraints.
-All the constraints can be created using step-matrix or whole-matrix.
-We will see that a mixed of the two is also possible.
+## Les contraintes
+La librairie fournit plusieurs types de contraintes.
+Elles peuvent toutes être crées avec matrice-pas/vecteur-pas ou matrice-total/vecteur-total.
+Plus tard, on montrera qu'on peut aussi mélanger les deux.
+Les contraintes doivent aussi être construites
 They also need to be wrapped in a shared pointer in order to pass them to the mpc.
 
 ### Trajectory Constraints
@@ -380,6 +376,7 @@ controller.solve();
 ```
 
 Finally, get the results
+
 ```c++
 Eigen::VectorXd trajectory(controller.trajectory());
 Eigen::VectorXd control(controller.control());
@@ -436,6 +433,7 @@ controller.solve();
 ```
 
 Finally, get the results
+
 ```python
 trajectory = controller.trajectory();
 control = controller.control();
